--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.5.16",
+    "vue-drag-drop": "^1.1.4",
     "vuedraggable": "^2.16.0"
   },
   "devDependencies": {
