--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "lodash": "^4.17.10",
     "vue": "^2.5.16",
     "vue-drag-drop": "^1.1.4",
     "vuedraggable": "^2.16.0"
